<resources>
    <string name="app_name">Photi</string>
    <string name="facebook_app_id">1178922380714530</string>
    <string name="facebook_client_token">5701967ed244b1fb1e8cd5ebc531800c</string>


    <!-- AUTH -->
    <string name="login">로그인</string>
    <string name="signup">회원가입</string>
    <string name="findid">아이디 찾기</string>
    <string name="findpw">비밀번호 찾기</string>
    <string name="findid2">가입 시 사용했던 \n이메일을 입력해주세요</string>
    <string name="emailerror1">이메일 형태가 올바르지 않아요</string>
    <string name="emailerror2">가입되지 않은 이메일이에요</string>
    <string name="enterId">아이디를 입력해주세요</string>
    <string name="enterEmail">가입 시 사용했던 이메일을 입력해주세요</string>
    <string name="email">이메일</string>
    <string name="id">아이디</string>
    <string name="enterpwd">임시 비밀번호가 일치하지 않아요</string>
    <string name="enternewpwd">새 비밀번호를 입력해주세요</string>
    <string name="findpwd">이메일로 임시 비밀번호를 보내드렸습니다\n임시 비밀번호를 입력해주세요</string>
    <string name="newPw1">새 비밀번호</string>
    <string name="newPw2">새 비밀번호 확인</string>
    <string name="temporarypassword">임시 비밀번호</string>
    <string name="requirePw1">영문 포함</string>
    <string name="requirePw2">숫자 포함</string>
    <string name="requirePw3">특수문자 포함</string>
    <string name="requirePw4">8~30자</string>
    <string name="loginerror">아이디 또는 비밀번호가 일치하지 않아요</string>

    <string name="signupemail">환영합니다! \n이메일을 입력해주세요</string>
    <string name="signupauth">이메일로 인증코드를 보내드렸습니다 \n숫자 4자리를 입력해주세요</string>
    <string name="signupid">아이디를 입력해주세요</string>
    <string name="signupid2">알파벳 소문자,숫자,특수문자만 사용 가능해요</string>
    <string name="signuppw">비밀번호를 입력해주세요</string>
    <string name="signuppw2">한번 더 입력해주세요</string>
    <string name="resend"><u>재전송</u></string>
    <string name="emailerror">이메일 형태가 올바르지 않아요</string>
    <string name="emaileroor100">100자 이하의 이메일을 사용해주세요</string>
    <string name="autherror">인증코드가 일치하지 않아요</string>
    <string name="iderror">이미 사용중인 아이디예요</string>
    <string name="idsuccess">사용할 수 있는 아이디예요</string>
    <string name="emailinfo1">이메일이 오지 않는 경우</string>
    <string name="emailinfo2">입력하신 이메일 주소가 정확한지 확인해 주세요.</string>
    <string name="emailinfo3">스팸 메일함을 확인해 주세요.</string>
    <string name="emailinfo4">재전송 요청 버튼을 눌러 메일을 다시 받아주세요.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="profilepassword"><u>비밀번호가 기억나지 않아요</u></string>

    <!-- HOME -->
    <string name="guesthome">회원님을 기다리고 있는 \n챌린지들이에요</string>
    <string name="memberhome">photi님의 \n열정을 보여주세요!</string>
    <string name="memberhome2">요즘 인기 챌린지 보여드릴게요</string>
    <string name="addphoto">더 많은 챌린지는 \n어디서 만날 수 있을까요?</string>
    <string name="makechallenge">챌린지 만들기</string>
    <string name="newchallenge">\'챌린지\' 탭으로 이동해 다양한 챌린지를 만나보세요.</string>
    <string name="newchallenge2">새로운 열정을 만들어 보세요.</string>
    <string name="proofshothome">인증샷 찍으러 가볼까요?</string>
    <string name="mychallenge">내 챌린지</string>
    <string name="authphoto">무엇으로 인증할까요?</string>

    <!-- CHALLENGE -->
    <string name="join">함께하기</string>
    <string name="create">챌린지 완성!</string>
    <string name="modify">저장하기</string>
    <string name="seeall">전체보기</string>
    <string name="personalgoal">잠깐! 이 챌린지에서 이루고 싶은 \n회원님만의 목표를 알려주세요</string>
    <string name="personalgoal2">다른 파티원도 확인할 수 있어요</string>
    <string name="skip">건너뛰기</string>
    <string name="save">내 목표 저장하기</string>
    <string name="invitecode">초대코드를 입력해주세요</string>
    <string name="codeerror">초대코드가 일치하지 않아요</string>
    <string name="logintojoin">로그인하시면\n챌린지에 참여할 수 있어요</string>
    <string name="logintojoin2">로그인하러 가볼까요?</string>

    <!-- CREATE -->
    <string name="createchallenge">개최하고 싶은 \n챌린지가 있나요?</string>
    <string name="createchallenge2">파티장이 되어보세요</string>
    <string name="createchallenge3">평균 5~10분 소요돼요</string>
    <string name="createchallenge4">가보자구요!</string>

    <string name="createname">챌린지 이름을 정해주세요</string>
    <string name="createname2">전체공개</string>
    <string name="createname3">다양한 사람들과 챌린지를 즐겨요</string>
    <string name="createname4">친한 친구들과 챌린지를 즐겨요</string>

    <string name="createcontent">챌린지의 목표는 무엇인가요?</string>
    <string name="createcontent2">이루고자 하는 목표를 알려주세요!</string>
    <string name="createcontent3">하루 인증 시간을 정해주세요</string>
    <string name="createcontent4">매일 이 시간에 인증 사진을 올려요</string>
    <string name="createcontent5">챌린지 종료 날짜를 정해주세요</string>
    <string name="createcontent6">종료 날짜는 시작 날짜를 앞설 수 없어요</string>

    <string name="createimage">대표 이미지를 정해주세요!</string>
    <string name="createimage2">직접 불러오기</string>

    <string name="createrule">인증 룰을 정해볼까요?</string>
    <string name="createrule2">새로운 룰 만들기</string>
    <string name="createrule3">어떤 룰을 정해볼까요?</string>

    <string name="createhashtag">챌린지를 표현하는 해시태그를 정해주세요</string>
    <string name="createcomplete">챌린지 완성!</string>

</resources>