<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="fragment"
            type="com.example.alloon_aos.view.fragment.auth.FindPasswordFragment" />
    </data>

    <LinearLayout
        style="@style/Theme.Alloonaos"
        android:orientation="vertical"
        android:background="@color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enterId"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="24dp"
            android:textSize="18sp"
            android:textColor="@color/gray900"
            />
        <EditText
            android:id="@+id/id_editText"
            android:layout_width="312dp"
            android:layout_height="46dp"
            android:hint="@string/id"
            android:textColorHint="@color/gray400"
            android:background="@drawable/input_line_default"
            android:ems="10"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="24dp"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enterEmail"
            android:layout_marginTop="48dp"
            android:layout_marginLeft="24dp"
            android:textSize="18sp"
            android:textColor="@color/gray900"
            />
        <EditText
            android:id="@+id/email_editText"
            android:layout_width="312dp"
            android:layout_height="56dp"
            android:hint="@string/email"
            android:textColorHint="@color/gray400"
            android:background="@drawable/input_line_default"
            android:ems="10"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="24dp"
            android:textSize="14sp"/>
        <Button
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="288dp"
            android:backgroundTint="@color/btn_color_green"
            android:enabled="false"
            android:text="다음"
            android:theme="@style/Theme.xlarge_round" />

    </LinearLayout>

</layout>