<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="fragment"
            type="com.example.alloon_aos.view.fragment.auth.PasswordSendFragment" />
        <variable
            name="viewModel"
            type="com.example.alloon_aos.viewmodel.AuthViewModel" />
    </data>

    <LinearLayout
        style="@style/Theme.Alloonaos"
        android:orientation="vertical"
        android:background="@color/white">
        <LinearLayout
            android:id="@+id/sendCode_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enterId"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="24dp"
                android:textSize="18sp"
                android:textColor="@color/gray900"
                android:letterSpacing="-0.03"
                />
            <EditText
                android:id="@+id/id_editText"
                android:layout_width="312dp"
                android:layout_height="46dp"
                android:text="@={viewModel.id}"
                android:hint="@string/id"
                android:textColorHint="@color/gray400"
                android:background="@drawable/input_line_default"
                android:ems="10"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="24dp"
                android:textSize="14sp"
                android:letterSpacing="-0.03"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enterEmail"
                android:layout_marginTop="48dp"
                android:layout_marginLeft="24dp"
                android:textSize="18sp"
                android:textColor="@color/gray900"
                android:letterSpacing="-0.03"
                />
            <EditText
                android:id="@+id/email_editText"
                android:layout_width="312dp"
                android:layout_height="56dp"
                android:text="@={viewModel.email}"
                android:hint="@string/email"
                android:textColorHint="@color/gray400"
                android:background="@drawable/input_line_default"
                android:ems="10"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="24dp"
                android:textSize="14sp"
                android:letterSpacing="-0.03"/>
            <TextView
                android:id="@+id/error_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emailerror1"
                android:layout_marginTop="5dp"
                android:layout_marginRight="24dp"
                android:layout_marginLeft="24dp"
                android:textSize="12sp"
                android:textColor="@color/red400"
               android:visibility="gone" />
        </LinearLayout>
        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/btn_color_green"
            android:onClick="@{() ->viewModel.sendNewPassword() }"
            android:text="다음"
            android:theme="@style/Theme.xlarge_round"
            android:enabled="false" />

    </LinearLayout>

</layout>