<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="fragment"
            type="com.example.alloon_aos.view.fragment.create.CreateChallengeFragment" />
        <variable
            name="viewModel"
            type="com.example.alloon_aos.viewmodel.CreateViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:theme="@style/Theme.Photi">

        <TextView
            android:id="@+id/create_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/suit_bold"
            android:gravity="center"
            android:text="@string/createchallenge"
            android:textColor="@color/gray900"
            android:textSize="22dp"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="312dp"
            android:layout_height="250dp"
            android:src="@drawable/graphic_create_challenge"
            android:layout_marginTop="66dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_textView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/suit_bold"
            android:letterSpacing="-0.03"
            android:text="@string/createchallenge2"
            android:textColor="@color/blue400"
            android:textSize="12dp"
            android:drawableStart="@drawable/ic_rocket"
            android:drawableTint="@color/blue400"
            android:drawablePadding="6dp"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@+id/create_textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/create_textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/suit_bold"
            android:letterSpacing="-0.03"
            android:text="@string/createchallenge3"
            android:textColor="@color/blue400"
            android:textSize="12dp"
            android:drawableStart="@drawable/ic_time"
            android:drawableTint="@color/blue400"
            android:drawablePadding="6dp"
            android:gravity="center"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/start_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/start_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_round_primary"
            android:theme="@style/Theme.xlarge_round"
            android:text="@string/createchallenge4"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="24dp"
            android:layout_marginLeft="24dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>