<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="fragment"
            type="com.example.alloon_aos.view.fragment.auth.PasswordChangeFragment" />
        <variable
            name="viewModel"
            type="com.example.alloon_aos.viewmodel.AuthViewModel" />
    </data>

    <LinearLayout
        style="@style/Theme.Alloonaos"
        android:orientation="vertical"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enternewpwd"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="24dp"
                android:textSize="18sp"
                android:textColor="@color/gray900"
                android:letterSpacing="-0.03"
                />
            <EditText
                android:id="@+id/newPassword1_editText"
                android:layout_width="312dp"
                android:layout_height="46dp"
                android:hint="@string/newPw1"
                android:textColorHint="@color/gray400"
                android:background="@drawable/input_line_default"
                android:ems="10"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="24dp"
                android:textSize="14sp"
                android:letterSpacing="-0.03"
                android:drawableRight="@drawable/ic_eye_off"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="10dp">
                <TextView
                    android:id="@+id/check_eng"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_check"
                    android:drawablePadding="6dp"
                    android:drawableTint="@color/gray400"
                    android:text="영문 포함"
                    android:textColor="@color/gray400"
                    android:textSize="12dp"/>

                <TextView
                    android:id="@+id/check_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_check"
                    android:drawablePadding="6dp"
                    android:drawableTint="@color/gray400"
                    android:text="숫자 포함"
                    android:textColor="@color/gray400"
                    android:textSize="12dp"
                    android:layout_marginLeft="14dp"/>

                <TextView
                    android:id="@+id/check_char"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_check"
                    android:drawablePadding="6dp"
                    android:drawableTint="@color/gray400"
                    android:text="특수문자 포함"
                    android:textColor="@color/gray400"
                    android:textSize="12dp"
                    android:layout_marginLeft="14dp"/>

                <TextView
                    android:id="@+id/check_length"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_check"
                    android:drawablePadding="6dp"
                    android:drawableTint="@color/gray400"
                    android:text="8~30자"
                    android:textColor="@color/gray400"
                    android:textSize="12dp"
                    android:layout_marginLeft="14dp"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signuppw2"
                android:layout_marginTop="48dp"
                android:layout_marginLeft="24dp"
                android:textSize="18sp"
                android:textColor="@color/gray900"
                android:letterSpacing="-0.03"
                />
            <EditText
                android:id="@+id/newPassword2_editText"
                android:layout_width="312dp"
                android:layout_height="46dp"
                android:hint="@string/newPw2"
                android:textColorHint="@color/gray400"
                android:background="@drawable/input_line_default"
                android:ems="10"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="24dp"
                android:textSize="14sp"
                android:letterSpacing="-0.03"/>
            <TextView
                android:id="@+id/check_pw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_check"
                android:drawablePadding="6dp"
                android:drawableTint="@color/gray400"
                android:text="비밀번호 일치"
                android:textColor="@color/gray400"
                android:textSize="12dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="10dp"/>
        </LinearLayout>



        <Button
            android:id="@+id/next_button"
            android:onClick="@{() -> fragment.go() }"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/btn_color_green"
            android:text="다음"
            android:theme="@style/Theme.xlarge_round"
            android:enabled="false" />

    </LinearLayout>

</layout>