<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="activity"
            type="com.photi.aos.view.activity.GoalActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/inquiry"
        tools:context=".view.activity.GoalActivity"
        android:theme="@style/Theme.Photi"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/action_bar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/white"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="16dp"
                android:text="챌린지 조회"
                android:textColor="@color/gray900"
                android:fontFamily="@font/suit_bold"/>

        </androidx.appcompat.widget.Toolbar>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/action_bar"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/graphic_imageview"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginLeft="24dp"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/graphic_goal"/>

            <TextView
                android:id="@+id/goal_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/suit_semibold"
                android:letterSpacing="-0.03"
                android:lineSpacingExtra="3dp"
                android:text="@string/personalgoal"
                android:textColor="@color/gray900"
                android:textSize="18dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/graphic_imageview" />

            <TextView
                android:id="@+id/goal_textview2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/suit_medium"
                android:letterSpacing="-0.03"
                android:lineSpacingExtra="3dp"
                android:text="@string/personalgoal2"
                android:textColor="@color/gray700"
                android:textSize="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/goal_textview" />

            <EditText
                android:id="@+id/goal_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_line_default"
                android:ems="10"
                android:maxLength="16"
                android:fontFamily="@font/suit_medium"
                android:hint="예) 잊지못할 추억 남기기"
                android:inputType="text"
                android:textColorHint="@color/gray400"
                android:textSize="14dp"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/goal_textview2" />

            <TextView
                android:id="@+id/num_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/suit_medium"
                android:text="0/16"
                android:textColor="@color/gray400"
                android:textSize="12dp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="@+id/goal_edittext"
                app:layout_constraintTop_toBottomOf="@+id/goal_edittext" />

            <Button
                android:id="@+id/next_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_round_quaternary"
                android:text="@string/skip"
                android:textColor="@color/gray600"
                android:theme="@style/Theme.xlarge_round"
                android:stateListAnimator="@null"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="24dp"
                android:layout_marginLeft="24dp"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>